[package]
name = "domrs"
version = "0.0.13"
authors = ["Dariusz Depta <wisbery@users.noreply.github.com>"]
description = "Document builder and serializer"
documentation = "https://docs.rs/domrs"
repository = "https://github.com/wisbery/domrs.git"
keywords = ["HTML", "CSS", "SVG", "builder", "serializer"]
categories = ["encoding", "text-processing", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
