[package]
name = "domrs"
version = "0.0.17"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Document builder and serializer"
documentation = "https://docs.rs/domrs"
repository = "https://github.com/EngosSoftware/domrs.git"
keywords = ["HTML", "CSS", "SVG", "builder", "serializer"]
categories = ["encoding", "text-processing", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"
